[package]
name = "marker-typ"
authors = ["Reese Hatfield github.com/ReeseHatfield"]
description = "Generate markdown documentation from typst doc comments"
license = "MIT"
homepage = "https://github.com/ReeseHatfield/marker"
repository = "https://github.com/ReeseHatfield/marker"
readme = "README.md"
version = "0.1.3"
edition = "2024"

[[bin]]
name = "marker"
path = "src/main.rs"

[dependencies]
regex = "1.12.3"
